PHASE 1: finished queue, created makefile, added test cases

--- a/libuthread/Makefile
+++ b/libuthread/Makefile
@@ -1,6 +1,20 @@
 # Target library
 lib := libuthread.a
 
+CC := gcc
+CFLAGS := -Wall -Wextra -Werror
+
+# Source files
+src := queue.c
+obj := $(src:.c=.o)
+
 all: $(lib)
 
-## TODO: Phase 1
+$(lib): $(obj)
+	ar rcs $@ $^
+
+%.o: %.c
+	$(CC) $(CFLAGS) -c -o $@ $<
+
+clean:
+	rm -f $(obj) $(lib)
